# djongo

./: .gitignore  Tut_02_MongoDB_Integration.py  pyproject.toml  requirements.txt
app/: settings.py
cards/: models.py  urls.py  views.py
cards/migrations/: 0001_initial.py
config/: settings.py  urls.py
todo/: models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_rename_headline_todo_todo.py
todo/template/: todo.html
