[tool.poetry]
name = "tut_02_djongo"
version = "0.1.0"
description = ""
authors = ["roman-ojha"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
autopep8 = "^1.6.0"
djongo = "^1.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
